<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/background">

    <Button
        android:id="@+id/btnliste"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="@color/greenBtn"
        android:layout_marginBottom="15dp"
        android:text="@string/la_liste_tout_les_habitants"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="359dp"
        android:layout_height="178dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue_sur_zenergy"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/h1"
        android:layout_marginBottom="20dp"/>


    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/acc_dez_vos_fonctionnalit_s"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"/>


    <Button
        android:id="@+id/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voir_mon_profil"
        android:backgroundTint="@color/greenBtn"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>


    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/param_tres"
        android:backgroundTint="@color/greenBtn"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnEcoCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendrier_de_consommation"
        android:backgroundTint="@color/GreenBtn2"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/se_d_connecter"
        android:backgroundTint="@color/RedBtn"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>
</LinearLayout>
