<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/background"
    android:gravity="center"
    tools:context=".LoginActivity">

    <!-- Sélecteur de langue -->
    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <!-- Titre de la page -->
    <TextView
        android:id="@+id/tvConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="32dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identify"
        android:layout_gravity="start"
        android:textColor="#666666"
        android:textSize="14sp"
        android:layout_marginBottom="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="1dp">

        <EditText
            android:id="@+id/etIdentifiant"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/border_edittext"
            android:hint="@string/email"
            android:padding="12dp"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/etMotDePasse"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/border_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Mot de passe oublié -->
    <TextView
        android:id="@+id/tvMotDePasseOublie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/forgot_password"
        android:textColor="#51729A"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

    <!-- Bouton de connexion -->
    <Button
        android:id="@+id/btnConnexion"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/greenBtn"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:clickable="true"
        android:layout_marginHorizontal="45dp"/>

    <!-- Création de compte -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_here"
            android:textColor="#666666"
            android:textSize="14sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tvCreerCompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#005BE4"
            android:textSize="14sp"
            android:textStyle="bold"
            android:clickable="true"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <!-- Séparateur -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#CCCCCC" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="#666666"
            android:textSize="14sp"
            android:layout_marginHorizontal="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#CCCCCC" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openFacebook">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/facebook"
            android:layout_marginEnd="8dp" />
        <TextView
            android:id="@+id/tvFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_facebook"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:clickable="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openFacebook">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/google"
            android:layout_marginEnd="10dp"
         />
        <TextView
            android:id="@+id/tvGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continuer_avec_google"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"

            android:clickable="true" />
    </LinearLayout>
</LinearLayout>
