<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background2">

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_s_lectionn_e"
        android:padding="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginTop="40dp" />

    <Spinner
        android:id="@+id/spinnerEquipement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerHeure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnRetour"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/retour"
            android:backgroundTint="@color/RedBtn"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnReserver"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/r_server"
            android:backgroundTint="@color/greenBtn"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>
