<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/background2"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="48dp"
        android:layout_height="46dp"
        android:layout_gravity="start"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:src="@drawable/fleche" />


    <!-- Titre de la page -->
    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvRegisterSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="24dp" />

    <!-- Section Prénom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/person"
                android:layout_marginEnd="12dp" />
            <EditText
                android:id="@+id/etPrenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textSize="20sp"
                android:background="@null"
                android:padding="20dp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />
    </LinearLayout>

    <!-- Section Nom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/person"
                android:layout_marginEnd="12dp" />
            <EditText
                android:id="@+id/etNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textSize="20sp"
                android:background="@null"
                android:padding="20dp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />
    </LinearLayout>

    <!-- Section E-mail -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/mail"
                android:layout_marginEnd="12dp" />
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="20sp"
                android:background="@null"
                android:padding="20dp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />
    </LinearLayout>

    <!-- Section Mot de passe -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/llock"
                android:layout_marginEnd="12dp" />
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="20sp"
                android:background="@null"
                android:padding="20dp"
                android:inputType="textPassword" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />
    </LinearLayout>

    <!-- Section Mobile -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="24dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/telephone"
            android:layout_marginEnd="12dp" />
        <Spinner
            android:id="@+id/spinnerCountryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/country"
            android:backgroundTint="@color/black" />
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="20sp"
            android:background="@null"
            android:padding="20dp"
            android:inputType="phone" />
    </LinearLayout>

    
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/greenBtn"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</LinearLayout>
